--- a/_reset.scss
+++ b/_reset.scss
@@ -21,6 +21,7 @@ textarea,
 fieldset,
 button {
   font-family: inherit;
+  display: inherit;
   font-size: 1rem;
   border: none;
   border-radius: 0;
